--- a/www/index.html
+++ b/www/index.html
@@ -1,49 +1,39 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <title></title>
-
-  <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-
-  <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-  <link href="css/ionic.app.css" rel="stylesheet">
--->
-
-<!-- ionic/angularjs js -->
-<script src="lib/ionic/js/ionic.bundle.js"></script>
-<!-- firebase & angularfire libraries -->
-<script src="lib/firebase/firebase.js"></script>
-<script src="lib/angular-fire/angularfire.min.js"></script>
-<script src="lib/angular-moment/moment.js"></script>
-<script src="lib/angular-moment/angular-moment.js"></script>
-
-<!-- cordova script (this will be a 404 during development) -->
-<script src="cordova.js"></script>
-
-<!-- your app's js -->
-<script src="js/app.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/services.js"></script>
-</head>
-
-<body ng-app="mychat">
-  <!--
-  The nav bar that will be updated as we navigate between views.
--->
-<ion-nav-bar class="bar-header bar-assertive">
-  <ion-nav-back-button>
-  </ion-nav-back-button>
-</ion-nav-bar>
-<!--
-The views will be rendered in the <ion-nav-view> directive below
-Templates are in the /templates folder (but you could also
-have templates inline in this html file if you'd like).
--->
-<ion-nav-view></ion-nav-view>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
+    <link href="lib/ionic/css/ionic.min.css?ionicCachebuster=3220" rel="stylesheet">
+    <link href="css/style.css?ionicCachebuster=3220" rel="stylesheet">
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+      <link href="css/ionic.app.css" rel="stylesheet">
+    -->
+    <!-- ionic/angularjs js -->
+    <script src="lib/ionic/js/ionic.bundle.js?ionicCachebuster=3220"></script>
+    <!-- firebase & angularfire libraries -->
+    <script src="lib/firebase/firebase.js?ionicCachebuster=3220"></script>
+    <script src="lib/angular-fire/angularfire.min.js?ionicCachebuster=3220"></script>
+    <script src="lib/angular-moment/moment.js?ionicCachebuster=3220"></script>
+    <script src="lib/angular-moment/angular-moment.js?ionicCachebuster=3220"></script>
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js?ionicCachebuster=3220"></script>
+    <!-- your app's js -->
+    <script src="js/app.js?ionicCachebuster=3220"></script>
+    <script src="js/controllers.js?ionicCachebuster=3220"></script>
+    <script src="js/services.js?ionicCachebuster=3220"></script>
+  </head>
+  <body ng-app="mychat">
+    <!-- The nav bar that will be updated as we navigate between views. -->
+    <ion-nav-bar class="bar-header bar-assertive">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    <!--
+      The views will be rendered in the <ion-nav-view> directive below
+      Templates are in the /templates folder (but you could also
+      have templates inline in this html file if you'd like).
+    -->
+    <ion-nav-view></ion-nav-view>
+  </body>
 </html>
