--- a/www/index.html
+++ b/www/index.html
@@ -4,24 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-    <link href="lib/ionic/css/ionic.min.css?ionicCachebuster=3220" rel="stylesheet">
-    <link href="css/style.css?ionicCachebuster=3220" rel="stylesheet">
+    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
       <link href="css/ionic.app.css" rel="stylesheet">
     -->
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js?ionicCachebuster=3220"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- firebase & angularfire libraries -->
-    <script src="lib/firebase/firebase.js?ionicCachebuster=3220"></script>
-    <script src="lib/angular-fire/angularfire.min.js?ionicCachebuster=3220"></script>
-    <script src="lib/angular-moment/moment.js?ionicCachebuster=3220"></script>
-    <script src="lib/angular-moment/angular-moment.js?ionicCachebuster=3220"></script>
+    <script src="lib/firebase/firebase.js"></script>
+    <script src="lib/angular-fire/angularfire.min.js"></script>
+    <script src="lib/angular-moment/moment.js"></script>
+    <script src="lib/angular-moment/angular-moment.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js?ionicCachebuster=3220"></script>
+    <script src="cordova.js"></script>
     <!-- your app's js -->
-    <script src="js/app.js?ionicCachebuster=3220"></script>
-    <script src="js/controllers.js?ionicCachebuster=3220"></script>
-    <script src="js/services.js?ionicCachebuster=3220"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
   </head>
   <body ng-app="mychat">
     <!-- The nav bar that will be updated as we navigate between views. -->
