streamline the process

--- a/www/index.html
+++ b/www/index.html
@@ -4,17 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-    <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+    <link href="css/ionic.app.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-      <link href="css/ionic.app.css" rel="stylesheet">
-    -->
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- firebase & angularfire libraries -->
     <script src="lib/firebase/firebase.js"></script>
-    <script src="lib/angular-fire/angularfire.min.js"></script>
-    <script src="lib/angular-moment/moment.js"></script>
+    <script src="lib/angularfire/dist/angularfire.min.js"></script>
+    <script src="lib/moment/moment.js"></script>
     <script src="lib/angular-moment/angular-moment.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
